--- a/front/html/index.html
+++ b/front/html/index.html
@@ -5,6 +5,9 @@
         <title>스타트업-인덱스</title>
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
+        <script src="../util/manifest.js"></script>
+        <script type="application/json" src="/js/manifest.json"></script>
+        <meta name="common">
     </head>
     <body>
         <div id="app"></div>
