--- a/front/html/login.html
+++ b/front/html/login.html
@@ -1,4 +1,4 @@
 <div>
     로그인페이지
 </div>
-<button onclick="includeHTML('join')">회원가입이동</button>
+<button class="common_btn" onclick="includeHTML('join')">회원가입이동</button>
