--- a/public/html/join.html
+++ b/public/html/join.html
@@ -1,1 +1,1 @@
-<div> 회원가입페이지 </div> <button onclick='includeHTML("login")'>로그인페이지이동</button>
+<div> 회원가입페이지 </div> <button class="common_btn" id="loginBtn">로그인페이지이동</button>
