--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,1 +1,1 @@
-<div> 로그인페이지 </div> <button class="common_btn" onclick='includeHTML("join")'>회원가입이동</button>
+<div> 로그인페이지 </div> <button class="common_btn" id="joinBtn">회원가입이동</button>
