--- a/front/html/index.html
+++ b/front/html/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>스타트업-인덱스</title>
+        <title>가로세로퀴즈퀴즈</title>
+        <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
         <script src="../util/manifest.js"></script>
