--- a/front/html/login.html
+++ b/front/html/login.html
@@ -1,4 +1,11 @@
-<div>
-    로그인페이지
+<div class="login_box">
+    <div class="login_title">가로세로 퀴즈퀴즈</div>
+    <div class="login_content">
+        SNS으로 즐기는 가로세로 퀴즈퀴즈<br>
+        SNS으로 로그인해주세요
+    </div>
+    <div class="sns_box">
+        <div id="naver_id_login"></div>
+    </div>
 </div>
 <button class="common_btn" id="joinBtn">회원가입이동</button>
