--- a/front/html/login.html
+++ b/front/html/login.html
@@ -5,7 +5,7 @@
         SNS으로 로그인해주세요
     </div>
     <div class="sns_box">
-        <div id="naver_id_login"></div>
+        <div id="naver_id_login" class="sns_btn"></div>
     </div>
 </div>
 <button class="common_btn" id="joinBtn">회원가입이동</button>
