--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,1 +1,7 @@
-<div class="login_box"> <div class="login_title">가로세로 퀴즈퀴즈</div> <div class="login_content"> SNS으로 즐기는 가로세로 퀴즈퀴즈<br> SNS으로 로그인해주세요 </div> <div class="sns_box"> <div id="naver_id_login" class="sns_btn"></div> </div> </div> <button class="common_btn" id="joinBtn">회원가입이동</button>
+<div class="login_box">
+    <div class="login_title">가로세로 퀴즈퀴즈</div>
+    <div class="login_content"> SNS으로 즐기는 가로세로 퀴즈퀴즈<br> SNS으로 로그인해주세요 </div>
+    <div class="sns_box">
+        <div id="naver_id_login" class="sns_btn"></div>
+    </div>
+</div> <button class="common_btn" id="joinBtn">회원가입이동</button>
