--- a/front/html/index.html
+++ b/front/html/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
         <script src="../util/manifest.js"></script>
+        <script type="application/json" src="/js/manifest.json"></script>
         <meta name="common">
     </head>
     <body>
