--- a/front/html/index.html
+++ b/front/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>가로세로퀴즈퀴즈</title>
+        <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31a9793363e2c9db9cb095b6f46906a8"></script> -->
         <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
@@ -12,5 +13,14 @@
     <body>
         <div id="app"></div>
         <div id="loading"></div>
+        <div class="alert_container" id="alert_container">
+            <div class="alert_box" id="alert_box">
+                <div class="alert_title" id="alert_title"></div>
+                <div class="alert_content" id="alert_content"></div>
+                <div class="alert_btn_box">
+                    <button type="button" class="alert_btn_confirm" id="alert_confirm">OK</button>
+                </div>
+            </div>
+        </div>        
     </body>
 </html>
