--- a/front/html/index.html
+++ b/front/html/index.html
@@ -13,12 +13,31 @@
     <body>
         <div id="app"></div>
         <div id="loading"></div>
-        <div class="alert_container" id="alert_container">
+        <div class="alert_container" id="alert_container" style="display: none;">
             <div class="alert_box" id="alert_box">
-                <div class="alert_title" id="alert_title"></div>
-                <div class="alert_content" id="alert_content"></div>
+                <div class="alert_icon" id="alert_icon" style="display: none;">
+                    <div class="alert_success" id="alert_success" style="display: none;">
+                        <div class="success_v success_v_left"></div>
+                        <div class="success_v success_v_right"></div>
+                    </div>
+                    <div class="alert_error" id="alert_error" style="display: none;">
+                        <div class="error_x error_x_left"></div>
+                        <div class="error_x error_x_right"></div>
+                    </div>
+                    <div class="alert_warning" id="alert_warning" style="display: none;">
+                        <div class="warning_icon">!</div>
+                    </div>
+                    <div class="alert_info" id="alert_info" style="display: none;">
+                        <div class="info_icon">i</div>
+                    </div>
+                    <div class="alert_question" id="alert_question" style="display: none;">
+                        <div class="question_icon">?</div>
+                    </div>
+                </div>
+                <div class="alert_title" id="alert_title" style="display: none;"></div>
+                <div class="alert_content" id="alert_content" style="display: none;"></div>
                 <div class="alert_btn_box">
-                    <button type="button" class="alert_btn_confirm" id="alert_confirm">OK</button>
+                    <button type="button" class="alert_btn_confirm" id="alert_confirm" style="display: none;">OK</button>
                 </div>
             </div>
         </div>        
