--- a/front/html/index.html
+++ b/front/html/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>가로세로퀴즈퀴즈</title>
-        <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31a9793363e2c9db9cb095b6f46906a8"></script> -->
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31a9793363e2c9db9cb095b6f46906a8"></script>
         <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
         <script src="../util/manifest.js"></script>
         <meta name="common">
     </head>
+    <header>
+        <div id="header"></div>
+    </header>
     <body>
         <div id="app"></div>
         <div id="loading"></div>
