--- a/front/html/header.html
+++ b/front/html/header.html
@@ -1,3 +1,8 @@
-<div>
-    <div id="test">헤더</div>    
+<div class="header" id="header">
+    <div class="header_point" id="header_point"></div>
+    <div class="header_title" id="header_title">댕어플</div>
+    <div class="header_right">
+        <div class="header_avata" id="header_avata"></div>
+        <div class="header_name" id="header_name"></div>        
+    </div>    
 </div>
