--- a/front/html/header.html
+++ b/front/html/header.html
@@ -1,5 +1,8 @@
 <div class="header" id="header">
-    <div class="header_point" id="header_point"></div>
+    <div class="header_left">
+        <div class="header_back" id="header_back"><</div>
+        <div class="header_point" id="header_point"></div>
+    </div>
     <div class="header_title" id="header_title">댕어플</div>
     <div class="header_right">
         <div class="header_avata" id="header_avata"></div>
