--- a/front/html/missing.html
+++ b/front/html/missing.html
@@ -1,4 +1,3 @@
-<div>
-    <div id="map" style="width:500px;height:400px;"></div>
-    <button id="move">이동</button>
+<div class="missing_container">
+    <div class="map" id="map"></div>
 </div>
