--- a/front/html/disappearance.html
+++ b/front/html/disappearance.html
@@ -15,6 +15,11 @@
         <div class="th">성별</div>
         <div class="radio" id="sex"></div>
     </div>
+    <div class="row_box">
+        <div class="th">몸무게</div>
+        <input type="number" value="20">
+    </div>
+    
 
     <div id="disapper">신고하기</div>
 </div>
