--- a/front/html/disappearance.html
+++ b/front/html/disappearance.html
@@ -19,7 +19,10 @@
         <div class="th">몸무게</div>
         <input type="number" value="20">
     </div>
-    
+    <div class="row_box">
+        <div class="th">실종날짜</div>
+        <div id="calendar"></div>
+    </div>
 
     <div id="disapper">신고하기</div>
 </div>
