--- a/front/html/index.html
+++ b/front/html/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
         <script src="../util/manifest.js"></script>
-        <script src="../util/components.js" type="module"></script>
+        <!-- <script src="../util/components.js" type="module"></script> -->
         <components></components>
         <meta name="common">
     </head>
