--- a/front/html/missing.html
+++ b/front/html/missing.html
@@ -1,3 +1,4 @@
 <div class="missing_container">
+    <img src="../img/flasher.png" style="display: none;">
     <div class="map" id="map"></div>
 </div>
