'식단업로드화면중'

--- a/front/html/home.html
+++ b/front/html/home.html
@@ -29,8 +29,10 @@
         <div class="home_box">
             <div class="home_box_title">댕후원</div>
         </div>
-        <div class="home_box">
-            <div class="home_box_title">빈칸</div>
+        <div class="home_box" data-id="food">
+            <div class="home_box_title">댕식단</div>
+            <div class="home_box_content">우리아이 좋은식단</div>
+            <div class="home_box_content">공유합니다</div>
         </div>
     </div>
 </div>
