'드래그앤드랍'

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -7,6 +7,8 @@
         <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
         <link rel="shortcut icon" href="../img/favicon.ico">
         <script src="../util/jquery_v360.js"></script>
+        <script src="../util/sort.js"></script>
+        <script src="../util/touch.js"></script>
         <script src="../util/manifest.js"></script>
         <!-- <script src="../util/components.js" type="module"></script> -->
         <components></components>
