--- a/front/html/foodUpload.html
+++ b/front/html/foodUpload.html
@@ -5,5 +5,10 @@
             업로드할 이미지를 선택해주세요
         </div>
     </div>
+    <div class="uploaded_title_box">업로드한 이미지</div>
+    <div class="show_file_upload" id="file_box">
+        
+    </div>
+
     <input class="hidden" id="file_data" type="file" accept="image/*, .jpg, .png, .bmp, .gif, .jpeg" multiple>
 </div>
