댕식단 태그 가져오는 부분 진행중

--- a/front/html/foodUpload.html
+++ b/front/html/foodUpload.html
@@ -5,9 +5,12 @@
             업로드할 이미지를 선택해주세요
         </div>
     </div>
-    <div class="uploaded_title_box">업로드한 이미지</div>
+    <div class="uploaded_title_box">업로드한 이미지(대표 썸네일을 클릭해주세요)</div>
     <div class="show_file_upload" id="file_box">
         
+    </div>
+    <div class="upload_text_box">
+        <textarea class="upload_text" id="file_text" placeholder="문구 입력..."></textarea>
     </div>
 
     <input class="hidden" id="file_data" type="file" accept="image/*, .jpg, .png, .bmp, .gif, .jpeg" multiple>
