--- a/front/html/index.html
+++ b/front/html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>가로세로퀴즈퀴즈</title>
+        <title>댕어플</title>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=31a9793363e2c9db9cb095b6f46906a8"></script>
         <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
         <link rel="shortcut icon" href="../img/favicon.ico">
