프론트 해시태그 완성

--- a/front/html/food.html
+++ b/front/html/food.html
@@ -2,7 +2,7 @@
     <div class="top">
         <div class="search_box">
             <div class="search_icon"></div>
-            <input class="search_input">
+            <input class="search_input" placeholder="검색">
         </div>
         <div class="write" id="upload"></div>
     </div>
