--- a/front/html/foodUpload.html
+++ b/front/html/foodUpload.html
@@ -11,7 +11,13 @@
     </div>
     <div class="upload_text_box">
         <textarea class="upload_text" id="file_text" placeholder="문구 입력..."></textarea>
+        <div class="upload_text_div" id="file_text_div"></div>
     </div>
+    <div class="hashtag_outer_box">
+        해시태그 나오는 화면
+        <div class="hashtag_box" id="hashtag_box"></div>
+        <div class="hashtag_loading" id="hashtag_loading"></div>
+    </div>    
 
     <input class="hidden" id="file_data" type="file" accept="image/*, .jpg, .png, .bmp, .gif, .jpeg" multiple>
 </div>
