해시태그 업로드 완료

--- a/front/html/foodUpload.html
+++ b/front/html/foodUpload.html
@@ -5,7 +5,7 @@
             업로드할 이미지를 선택해주세요
         </div>
     </div>
-    <div class="uploaded_title_box">업로드한 이미지(대표 썸네일을 클릭해주세요)</div>
+    <div class="uploaded_title_box">업로드한 이미지(대표 썸네일을 클릭해주세요)<div class="btn upload_btn" id="file_upload_btn">등록</div></div>
     <div class="show_file_upload" id="file_box">
         
     </div>
